--- a/fridge/templates/fridge/header.html
+++ b/fridge/templates/fridge/header.html
@@ -31,12 +31,12 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            FAQ
+                            Autorzy
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item">Action</a>
-                            <a class="dropdown-item">Another action</a>
-                            <a class="dropdown-item">Something else here</a>
+                            <a class="dropdown-item">Aleksander Bober</a>
+                            <a class="dropdown-item">Jakub Kwiatkowski</a>
+                            <a class="dropdown-item">Tymoteusz Mirski</a>
                         </div>
                     </li>
                 </ul>
