--- a/fridge/templates/fridge/home.html
+++ b/fridge/templates/fridge/home.html
@@ -38,7 +38,7 @@
         </script>
     {% else %}
         <h1 class="mt-5">Main Page</h1>
-        <p>To begin using myFridge please log in.</p><br>
+        <p style="margin-left: -100%;">To begin using myFridge please log in.</p><br>
     {% endif %}
 
 {% endblock content %}
